Mobile Fixes to javascript. Menu now closes on mobile when navigation is clicked.

--- a/assets/sass/2-partials/_header.sass
+++ b/assets/sass/2-partials/_header.sass
@@ -16,10 +16,12 @@ body
   min-height: 350px
   position: fixed
   background: #fff
+  opacity: 0
   transition: all 0.3s linear 0.3s
 
   &.active-nav
     width: 250px
+    opacity: 1
 
   &.active-nav-mobile
 
@@ -27,6 +29,7 @@ body
 
   .nav-wrapper
     width: 250px
+    opacity: 1
 
 
 .nav-display
